--- a/index.html
+++ b/index.html
@@ -30,6 +30,108 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <ul>
+        <!--List of hourly times and input for hourly schedule and button to save locally-->
+        <li>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text">9AM</span>
+            </div>
+            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text">10AM</span>
+            </div>
+            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text">11AM</span>
+            </div>
+            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text">12PM</span>
+            </div>
+            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text">1PM</span>
+            </div>
+            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text">2PM</span>
+            </div>
+            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text">3PM</span>
+            </div>
+            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text">4PM</span>
+            </div>
+            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text">5PM</span>
+            </div>
+            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
