--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text">9AM</span>
             </div>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <input type="text" class="form-control" id="input1" aria-label="Amount (to the nearest dollar)">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+              <button class="btn btn-outline-secondary" type="button" id="button-addon1">Save</button>
             </div>
           </div>
         </li>
@@ -48,7 +48,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text">10AM</span>
             </div>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <input type="text" class="form-control" id="input2" aria-label="Amount (to the nearest dollar)">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
             </div>
@@ -59,9 +59,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text">11AM</span>
             </div>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <input type="text" class="form-control" id="input3" aria-label="Amount (to the nearest dollar)">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+              <button class="btn btn-outline-secondary" type="button" id="button-addon3">Save</button>
             </div>
           </div>
         </li>
@@ -70,9 +70,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text">12PM</span>
             </div>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <input type="text" class="form-control" id="input4" aria-label="Amount (to the nearest dollar)">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+              <button class="btn btn-outline-secondary" type="button" id="button-addon4">Save</button>
             </div>
           </div>
         </li>
@@ -81,9 +81,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text">1PM</span>
             </div>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <input type="text" class="form-control" id="input5" aria-label="Amount (to the nearest dollar)">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+              <button class="btn btn-outline-secondary" type="button" id="button-addon5">Save</button>
             </div>
           </div>
         </li>
@@ -92,9 +92,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text">2PM</span>
             </div>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <input type="text" class="form-control" id="input6" aria-label="Amount (to the nearest dollar)">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+              <button class="btn btn-outline-secondary" type="button" id="button-addon6">Save</button>
             </div>
           </div>
         </li>
@@ -103,9 +103,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text">3PM</span>
             </div>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <input type="text" class="form-control" id="input7" aria-label="Amount (to the nearest dollar)">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+              <button class="btn btn-outline-secondary" type="button" id="button-addon7">Save</button>
             </div>
           </div>
         </li>
@@ -114,9 +114,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text">4PM</span>
             </div>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <input type="text" class="form-control" id="input8" aria-label="Amount (to the nearest dollar)">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+              <button class="btn btn-outline-secondary" type="button" id="button-addon8">Save</button>
             </div>
           </div>
         </li>
@@ -125,9 +125,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text">5PM</span>
             </div>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+            <input type="text" class="form-control" id="input9" aria-label="Amount (to the nearest dollar)">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+              <button class="btn btn-outline-secondary" type="button" id="button-addon9">Save</button>
             </div>
           </div>
         </li>
@@ -136,5 +136,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
